k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devopstest-service
spec:
  selector:
    app: devopstest
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
